--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,2 +1,10 @@
-$darkest-blue: #172A3A;
-$light-tan: #FFEAD0;
+$lightest-gray: #f5f5f5;
+$rose-gold: #bd8c7d;
+$silver: #8e8e90;
+$onyx: #49494b;
+$soft-gold: #d1bfa7;
+
+$teal: #3aafa9;
+$darkest-teal: #17252a;
+$dark-teal: #2b7a78;
+$light-teal: #def2f1;
