--- a/client/src/predictions/prediction-match/prediction-match.scss
+++ b/client/src/predictions/prediction-match/prediction-match.scss
@@ -4,30 +4,49 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    border-bottom: solid $rose-gold 1px;
 
     .team-wrapper {
         text-align: center;
-        margin-bottom: 75px;
+        padding: 24px;
+        width: 200px;
+        transition: all 0.2s;
+
+        &:hover {
+            background-color: lighten($onyx, 10%);
+            cursor: pointer;
+            opacity: 1 !important;
+            transition: all 0.2s;
+        }
+
+        &.predicted {
+            font-weight: bold;
+        }
+
+        &.not-predicted {
+            opacity: 0.2;
+        }
 
         &.red-side {
-            padding-right: 75px;
+            margin-right: 16px;
         }
 
         &.blue-side {
-            padding-left: 75px;
+            margin-left: 16px;
         }
 
         .team-logo-wrapper {
             padding-bottom: 12px;
 
             .team-logo {
-                height: 100px;
+                height: 64px;
                 width: auto;
             }
         }
 
         .team-name {
-            font-size: 1.7rem;
+            font-size: 1.2rem;
+            color: $lightest-gray;
         }
     }
 }
