--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -5,10 +5,10 @@ body {
     margin: 0;
 
     .app-wrapper {
-        width: 100vw;
-        height: 100vh;
-        font-family: 'Muli', sans-serif;
-        background-color: $teal;
+        width: 100%;
+        min-height: 100vh;
+        font-family: $font;
+        background-color: $onyx;
     }
 }
 
