--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -8,10 +8,9 @@ body {
         width: 100%;
         min-height: 100vh;
         font-family: $font;
-        background-color: $onyx;
+        background-color: #f5f5f5;
     }
 }
 
 @import '../components/components.scss';
-@import '../login/login.scss';
 @import '../predictions/predictions.scss';
