--- a/client/src/welcome/login/login.scss
+++ b/client/src/welcome/login/login.scss
@@ -11,13 +11,10 @@
         .login-input {
             width: calc(100% - 28px);
             border: 0;
-            font-size: 1.2rem;
+            font-size: 1rem;
             padding: 12px;
             border-radius: 4px;
-            border: solid 2px $onyx;
-            -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
-                -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
-                    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
+            border: solid 1px #b2b2b2;
             
             &.input-error {
                 border: solid 2px red;
@@ -28,9 +25,10 @@
 
         .input-icon {
             position: absolute;
-            right: 18px;
-            top: 15%;
-            height: 100%;
+            right: 15px;
+            top: 21%;
+            height: 18px;
+            width: 18px;
             font-size: 1.7rem;
             color: $darkest-teal;
             opacity: 0.7;
@@ -39,22 +37,25 @@
                 animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
                 transform: translate3d(0, 0, 0);
             }
+
+            &.load-icon {
+                top: 8%;
+                width: 42px;
+            }
         }
     }
 
     .login-button {
         width: 100%;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         text-align: center;
         color: white;
         background-color: #c32148;
-        border: none;
+        border: solid 1px black;
+        border-radius: 5px;
         cursor: pointer;
         padding: 12px;
         transition: all 0.2s ease-in;
-        -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
-            -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
-                box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.75);
 
         &:hover {
             background-color: darken(#c32148, 3%);
@@ -80,6 +81,14 @@
                 text-decoration: underline;
             }
         }
+    }
+
+    .login-error-wrapper {
+        text-align: center;
+        color: red;
+        padding-top: 20px;
+        font-style: italic;
+        font-size: 0.9rem;
     }
 }
 
