--- a/client/src/welcome/welcome.scss
+++ b/client/src/welcome/welcome.scss
@@ -1,29 +1,27 @@
 .welcome-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
 
-    .welcome__app-title {
-        padding: 100px 0;
-        text-align: center;
-        font-size: 5rem;
-        font-weight: bold;
-        width: 100%;
-        color: #c32148;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    }
-
-    .welcome__app-logo {
-        color: black;
-        font-size: 5rem;
-    }
-
-    .welcome__content {
-        width: 100%;
+    .welcome__content-card {
         padding-top: 100px;
-        display: flex;
-        justify-content: center;
+
+        .welcome__app-title {
+            font-size: 4rem;
+            font-weight: bold;
+            color: #c32148;
+            text-align: center;
+            padding-bottom: 40px;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        }
+    }
+
+    .welcome__designs {
+        flex: 3 1 auto;
+        text-align: center;
+
+        .welcome-icon {
+            padding-top: 300px;
+            height: 100px;
+            width: 100px;
+        }
     }
 }
