--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -8,7 +8,13 @@ body {
         width: 100%;
         min-height: 100vh;
         font-family: $font;
-        background-color: #f5f5f5;
+        background-color: #dfdfdfdf;
+        display: flex;
+
+        .content-wrapper {
+            width: 100%;
+            margin-left: 150px;
+        }
     }
 }
 
