--- a/client/src/predictions/predictions.scss
+++ b/client/src/predictions/predictions.scss
@@ -1,3 +1,9 @@
+.loading-indicator-wrapper {
+    display: flex;
+    justify-content: center;
+    padding-top: 250px;
+}
+
 .predictions-wrapper {
     .page-title-wrapper {
         font-size: 2.5rem;
@@ -15,7 +21,6 @@
     }
 
     .datestamp-wrapper {
-        width: 100%;
         font-size: 1.2rem;
         padding-left: 100px;
 
