--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -13,7 +13,7 @@ body {
 
         .content-wrapper {
             width: 100%;
-            margin-left: 150px;
+            margin-left: $navbar-size;
         }
     }
 }
