--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -10,6 +10,7 @@
         background-color: #5d001e;
         display: flex;
         flex-direction: column;
+        align-items: center;
 
         .navbar-app-title {
             font-size: 1.8rem;
@@ -23,18 +24,17 @@
 
         .navbar-links {
             width: 100%;
-            font-size: 0.8rem;
 
             .navbar-link {
                 color: $lightest-gray;
                 text-decoration: none;
                 transition: all .2s;
                 margin: 12px 0;
-                padding: 24px 0;
+                padding: 20px 0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 color: darken(white, 40%);
 
                 &:hover {
@@ -48,9 +48,67 @@
                 }
         
                 .nav-icon {
-                    padding-bottom: 8px;
+                    padding-bottom: 4px;
                     font-size: 1.5rem;
                 }
+            }
+        }
+
+        .navbar-user {
+            position: absolute;
+            width: 100%;
+            padding: 20px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            bottom: 40px;
+            color: white;
+            font-size: 0.8rem;
+
+            &:hover {
+                cursor: pointer;
+                transition: all .2s;
+                background-color: darken(#5d001e, 3%);
+            }
+
+            .nav-icon {
+                padding-bottom: 6px;
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+    .nav-popout {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        bottom: 55px;
+        left: $navbar-size;
+        width: 0;
+        background-color: white;
+        padding: 8px 0;
+        font-size: 1.3rem;
+        border-radius: 3px;
+        overflow: hidden;
+        transition: 0.2 all;
+
+        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+
+        &.popped-out {
+            width: 200px;
+            transition: 0.2 all;
+        }
+
+        .nav-item {
+            padding: 8px;
+            transition: 0.15s all;
+
+            &:hover {
+                background-color: darken(white, 10%);
+                cursor: pointer;
+                transition: 0.15s all;
             }
         }
     }
