--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -12,3 +12,9 @@ $teal: #3aafa9;
 $darkest-teal: #17252a;
 $dark-teal: #2b7a78;
 $light-teal: #def2f1;
+
+$primary: #252120;
+$secondary: lighten($primary, 5%);
+$tertiary: #91c7a1;
+$border-color: #848375;
+$font-color: white;
