--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,8 +1,11 @@
+@import '../../style/variables.scss';
+
 .page-title-wrapper {
     font-size: 2.5rem;
     padding: 24px 48px;
-    background-color: #f5f5f5;
-    border-bottom: solid 1px #c9c9c9;
+    background-color: $secondary;
+    border-bottom: solid 1px #848375;
+    color: $font-color;
     display: flex;
     justify-content: space-between;
     align-items: center;
