--- a/client/src/predictions/prediction-match/prediction-match.scss
+++ b/client/src/predictions/prediction-match/prediction-match.scss
@@ -1,8 +1,11 @@
+@import '../../style/variables.scss';
+
 .prediction-match-wrapper {
     margin: 16px;
     padding: 12px 36px;
-    background-color: #f5f5f5;
-    border: solid 1px #c9c9c9;
+    background-color: $secondary;
+    border: solid 1px $border-color;
+    color: $font-color;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,9 +27,9 @@
             text-align: center;
             transition: all 0.2s;
     
-            &:hover {
+            &.hoverable:hover {
                 cursor: pointer;
-                background-color: lightgrey;
+                background-color: lighten($secondary, 12%);
                 transition: all 0.2s;
             }
     
@@ -35,7 +38,6 @@
                 padding: 8px;
                 margin-bottom: 4px;
                 border-radius: 12px;
-                background-color: lighten(black, 20%);
     
                 &.not-predicted {
                     opacity: 0.3;
@@ -44,7 +46,7 @@
             }
     
             .team-name {
-                color: lighten(black, 20%);
+                color: $font-color;
                 font-size: 0.9rem;
     
                 &.not-predicted {
