--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -8,7 +8,7 @@ body {
         width: 100%;
         min-height: 100vh;
         font-family: $font;
-        background-color: #dfdfdfdf;
+        background-color: $primary;
         display: flex;
 
         .content-wrapper {
