refactored redux and auto rendered dashboard

--- a/client/src/homepage/homepage.scss
+++ b/client/src/homepage/homepage.scss
@@ -1,5 +1,10 @@
 @import '../style/variables.scss';
 
+.loading-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .homepage-wrapper {
     width: 100%;
 
