--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -9,4 +9,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .page-title {
+        height: 50px;
+    }
 }
