--- a/client/src/predictions/prediction-match/prediction-match.scss
+++ b/client/src/predictions/prediction-match/prediction-match.scss
@@ -13,6 +13,7 @@
     .prediction-block {
         width: 150px;
         font-weight: bold;
+        font-size: 1.2rem;
     }
 
     .prediction-content {
@@ -34,7 +35,7 @@
             }
     
             .team-image {
-                height: 48px;
+                height: 75px;
                 padding: 8px;
                 margin-bottom: 4px;
                 border-radius: 12px;
