--- a/client/src/components/navbar/settings-popover/settings-popover.scss
+++ b/client/src/components/navbar/settings-popover/settings-popover.scss
@@ -1,6 +1,6 @@
 @import '../../../style/variables.scss';
 
-.nav-popout {
+.nav-popout-wrapper {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -8,9 +8,8 @@
     left: $navbar-size;
     width: 0;
     background-color: white;
-    color: black;
-    padding: 8px 0;
-    font-size: 1.3rem;
+    color: lighten(black, 15%);
+    font-size: 1rem;
     border-radius: 3px;
     overflow: hidden;
     transition: 0.2 all;
@@ -20,18 +19,32 @@
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 
     &.popped-out {
-        width: 200px;
+        width: 250px;
         transition: 0.2 all;
     }
 
-    .nav-item {
-        padding: 8px;
-        transition: 0.15s all;
+    .nav-popout {
+        padding: 12px;
 
-        &:hover {
-            background-color: darken(white, 10%);
-            cursor: pointer;
-            transition: 0.15s all;
+        .nav-username {
+            font-size: 1.3rem;
+        }
+    
+        .nav-popout-separator {
+            width: 100%;
+        }
+    
+        .nav-item-wrapper {
+            .nav-item {
+                padding: 8px;
+                transition: 0.15s all;
+        
+                &:hover {
+                    background-color: darken(white, 10%);
+                    cursor: pointer;
+                    transition: 0.15s all;
+                }
+            }
         }
     }
 }
