--- a/client/src/homepage/prediction-widget/bo5-grid/bo5-grid.scss
+++ b/client/src/homepage/prediction-widget/bo5-grid/bo5-grid.scss
@@ -42,8 +42,16 @@
                         display: flex;
                         align-items: center;
 
+                        &.incorrect-prediction {
+                            opacity: 0.1;
+                        }
+
                         .series-score {
                             padding-left: 8px;
+
+                            &.incorrect-prediction {
+                                opacity: 0.1;
+                            }
                         }
                     }
                 }
