Added the achievement widget

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -3,8 +3,8 @@
 .page-title-wrapper {
     font-size: 2.5rem;
     padding: 24px 48px;
-    background-color: $secondary;
-    border-bottom: solid 1px #848375;
+    background-color: #463e3c;
+    border-bottom: solid 2px #848375;
     color: $font-color;
     display: flex;
     justify-content: space-between;
