--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -16,5 +16,6 @@ $light-teal: #def2f1;
 $primary: #252120;
 $secondary: lighten($primary, 5%);
 $tertiary: #91c7a1;
-$border-color: #848375;
+// $border-color: #848375;
+$border-color: #5C5C5C;
 $font-color: white;
