--- a/client/src/homepage/achievement-widget/split-achievements/split-achievements.scss
+++ b/client/src/homepage/achievement-widget/split-achievements/split-achievements.scss
@@ -3,123 +3,72 @@
 .split-achievement-widget {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    text-align: center;
     width: 100%;
 
     .main-split-stats {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-right: 40px;
+        padding-right: 12px;
 
         .main-split-stat {
             &.split-title {
-                font-size: 2.4rem;
-                padding-bottom: 24px;
+                font-size: 1.8rem;
             }
 
             &.split-sub-title {
-                font-size: 1.4rem;
+                font-size: 1.2rem;
                 padding-top: 24px;
 
                 &.split-placement {
-                    font-size: 2rem;
+                    font-size: 1.8rem;
                 }
             }
         }
     }
 
-    .secondary-split-stats {
+    .secondary-split-stats-wrapper {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 16px;
 
-        .secondary-split-stat {
-            height: 90px;
+        .secondary-split-stats {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-
-            &.bottom-stat {
-                padding-top: 12px;
-            }
-
-            .split-stat-value {
-                &.text-value {
-                    font-size: 2.0rem;
+            height: 100%;
+            padding: 0 16px;
+    
+            .secondary-split-stat {
+                width: 115px;
+                height: 90px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+    
+                &.bottom-stat {
+                    padding-top: 12px;
                 }
-
-                .team-logo {
-                    height: 65px;
-                    width: auto;
+    
+                .split-stat-value {
+                    &.text-value {
+                        font-size: 2.0rem;
+                    }
+    
+                    .team-logo {
+                        height: 65px;
+                        width: auto;
+                    }
                 }
-            }
-
-            .split-stat-label {
-                opacity: 0.8;
-                font-size: 1rem;
+    
+                .split-stat-label {
+                    text-align: center;
+                    opacity: 0.8;
+                    font-size: 1rem;
+                }
             }
         }
     }
 }
-
-// .split-achievement-widget {
-//     font-size: 1.4rem;
-//     width: 250px;
-
-//     .split-title {
-//         font-size: 1.1rem;
-//         grid-column-start: 1;
-//         grid-column-end: 3;
-//     }
-
-//     .split-stats-wrapper {
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-
-//         .split-stat {
-//             display: flex;
-//             flex-direction: column;
-//             align-items: center;
-//             margin: 8px;
-            
-//             .split-stat-title {
-//                 opacity: 0.7;
-//                 font-size: 1.2rem;
-//             }
-
-//             .split-stat-value {
-//                 font-size: 1.8rem;
-
-//                 .team-logo {
-//                     height: 50px;
-//                     width: auto;
-//                     margin-bottom: -8px;
-//                 }
-//             }
-//         }
-//     }
-
-//     .split-stat-cell {
-//         height: 36px;
-//         padding: 8px;
-
-//         &.split-title {
-//             font-size: 1.8rem;
-//             text-align: center;
-//         }
-
-//         &.split-stat-value {
-//             justify-content: center;
-
-//             .team-logo {
-//                 height: 30px;
-//                 width: auto;
-//             }
-    
-//         }
-//     }
-// }
