--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,4 +1,4 @@
-$font: 'Roboto', sans-serif;
+$font: 'Abel', sans-serif;
 
 $navbar-size: 100px;
 
@@ -14,8 +14,8 @@ $dark-teal: #2b7a78;
 $light-teal: #def2f1;
 
 $primary: #252120;
-$secondary: lighten($primary, 5%);
+$secondary: #463e3c;
 $tertiary: #91c7a1;
-// $border-color: #848375;
-$border-color: #5C5C5C;
+$border-color: #848375;
+// $border-color: #5C5C5C;
 $font-color: white;
