fixed broken prediction

--- a/client/src/homepage/active-split-widget/active-split-widget.scss
+++ b/client/src/homepage/active-split-widget/active-split-widget.scss
@@ -67,7 +67,8 @@
             }
 
             .board-score {
-                width: 15%;
+                text-align: center;
+                width: 30px;
             }
 
             &:not(:first-child) {
