--- a/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
+++ b/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
@@ -3,6 +3,8 @@
 
     .bo1-table {
         .bo1-table-row {
+            height: 48px;
+
             .bo1-table-cell {
                 width: 65px;
                 text-align: center;
