score bugfix and revamped user details page

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -40,7 +40,7 @@
                 &:hover {
                     cursor: pointer;
                     transition: all .2s;
-                    background-color: darken(#008080, 5%);
+                    background-color: darken(#18246E, 5%);
                 }
 
                 &.active {
@@ -68,7 +68,7 @@
             &:hover {
                 cursor: pointer;
                 transition: all .2s;
-                background-color: darken(#008080, 3%);
+                background-color: darken(#18246E, 3%);
             }
 
             .nav-icon {
