--- a/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
+++ b/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
@@ -39,6 +39,10 @@
                             opacity: 0.2;
                         }
                     }
+
+                    .missing-prediction-icon {
+                        opacity: 0.7;
+                    }
                 }
             }
         }
