--- a/client/src/user-details/user-details.scss
+++ b/client/src/user-details/user-details.scss
@@ -1,50 +1,53 @@
 @import '../style/variables.scss';
 
 .user-details-wrapper {
-    .user-information-wrapper {
-        width: 55%;
-        margin: 16px;
-        padding: 16px;
-        background-color: $secondary;
-        border: solid 1px $border-color;
-        color: $font-color;
+    background-color: $secondary;
+    border: solid 1px $border-color;
+    border-radius: 15px;
+    color: $font-color;
+    margin: 16px;
+    padding: 16px;
 
+    .user-detail {
+        .user-value {
+            font-size: 2rem;
+        }
+
+        .user-label {
+            opacity: 0.7;
+        }
+    }
+
+    .user-information-wrapper {
         .user-field {
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-            height: 32px;
+            &.summoner-name-field {
+                width: 500px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
 
             &:not(:first-child) {
                 padding-top: 16px;
             }
 
             .user-label {
-                flex: 1 1 30%;
-                font-size: 1.1rem;
-                color: white;
+                opacity: 0.8;
+                padding-bottom: 4px;
             }
 
             .user-value {
-                flex: 1 1 70%;
-                height: 32px;
+                font-size: 1.8rem;
 
-                &.value-with-button {
-                    display: flex;
-                    justify-content: space-between;
-                }
-
-                .user-value-text {
-                    padding: 6px;
+                .input-wrapper {
+                    width: 500px;
                 }
             }
         }
+    }
 
-        .user-details-actions {
-            width: 100%;
-            padding: 16px;
-            display: flex;
-            justify-content: center;
-        }
+    .user-details-actions {
+        padding: 16px;
+        margin-left: 175px;
     }
 }
