added dynamic grid addition

--- a/client/src/components/loading-indicator/loading-indicator.scss
+++ b/client/src/components/loading-indicator/loading-indicator.scss
@@ -4,6 +4,10 @@
     width: 80px;
     height: 80px;
 
+    &.light-mode div {
+        background: darken(white, 25%) !important;
+    }
+
     & div {
         display: inline-block;
         position: absolute;
