--- a/client/src/homepage/active-split-widget/active-split-widget.scss
+++ b/client/src/homepage/active-split-widget/active-split-widget.scss
@@ -7,6 +7,10 @@
     justify-content: space-around;
     align-items: center;
 
+    .loading-wrapper {
+        padding-top: 50px;
+    }
+
     .primary-split-stats {
         display: flex;
         flex-direction: column;
