added the team selector

--- a/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
+++ b/client/src/homepage/prediction-widget/bo1-grid/bo1-grid.scss
@@ -21,10 +21,8 @@
                     }
                 }
 
-                &.row-header {
+                &.row-label {
                     width: 100px;
-                    font-size: 1rem;
-                    text-align: right;
                     padding-right: 4px;
                 }
 
