small css tweaks

--- a/client/src/homepage/favorite-team-news/favorite-team-news.scss
+++ b/client/src/homepage/favorite-team-news/favorite-team-news.scss
@@ -8,6 +8,7 @@
 
     .favorite-team-icon-wrapper {
         flex: 0 0 150px;
+        padding-left: 24px;
 
         .favorite-team-icon {
             height: 150px;
