--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -26,7 +26,7 @@
             width: 100%;
 
             .navbar-link {
-                color: $lightest-gray;
+                color: darken($lightest-gray, 35%);
                 text-decoration: none;
                 transition: all .2s;
                 margin: 12px 0;
@@ -35,16 +35,15 @@
                 flex-direction: column;
                 align-items: center;
                 font-size: 0.8rem;
-                opacity: 0.7;
 
                 &:hover {
                     cursor: pointer;
-                    transition: all .2s;
+                    transition: background-color .2s;
                     background-color: darken(#18246E, 5%);
                 }
 
-                &.active {
-                    opacity: 1;
+                &.active-nav {
+                    color: white;
                 }
         
                 .nav-icon {
