Reworked schedule endpoint to use standings, plus UI rework

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -7,7 +7,7 @@
     .navbar-wrapper {
         width: $navbar-size;
         height: 100%;
-        background-color: #18246E;
+        background-color: $squad-blue-primary;
         display: flex;
         flex-direction: column;
         align-items: center;
