--- a/client/src/predictions/prediction-filters/prediction-filters.scss
+++ b/client/src/predictions/prediction-filters/prediction-filters.scss
@@ -1,6 +1,6 @@
 @import '../../style/variables.scss';
 
-.prediction-filters-wrapper {
+.prediction-filters {
     position: sticky;
     top: 0;
     z-index: 50;
@@ -14,6 +14,10 @@
 
     .prediction-dropdowns {
         display: flex;
+
+        & > * {
+            padding: 0 24px;
+        }
 
         .prediction-filter-wrapper {
             &:not(:first-child) {
