--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,6 +1,8 @@
-$font: 'Abel', sans-serif;
+$font: 'Cabin', sans-serif;
 
 $navbar-size: 100px;
+
+$squad-blue-primary: #18246E;
 
 $lightest-gray: #f5f5f5;
 $rose-gold: #bd8c7d;
@@ -19,5 +21,9 @@ $tertiary: #91c7a1;
 $border-color: #848375;
 // $border-color: #5C5C5C;
 $font-color: white;
+$font-color-darker: darken($font-color, 30%);
 
 $border: solid 2px $border-color;
+
+// antd overrides
+$primary-color: purple;
