--- a/client/src/homepage/prediction-widget/bo5-grid/bo5-grid.scss
+++ b/client/src/homepage/prediction-widget/bo5-grid/bo5-grid.scss
@@ -7,6 +7,10 @@
                 width: 65px;
                 text-align: center;
 
+                .no-answer {
+                    text-align: center;
+                }
+
                 &.header-cell {
                     text-align: center;
 
