small styling bug with login

--- a/client/src/welcome/login/login.scss
+++ b/client/src/welcome/login/login.scss
@@ -9,7 +9,7 @@
         }
 
         .login-input {
-            width: calc(100% - 28px);
+            width: 100%;
             border: 0;
             font-size: 1rem;
             padding: 12px;
