--- a/client/src/predictions/predictions.scss
+++ b/client/src/predictions/predictions.scss
@@ -5,3 +5,24 @@
     justify-content: center;
     padding-top: 250px;
 }
+
+.section-prediction-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .series-match-container {
+        margin: 48px;
+        width: 75%;
+        
+        .series-match-label {
+            border-bottom: solid 1px $border-color;
+            font-size: 1.5rem;
+            margin-bottom: 16px;
+    
+            &:not(:first-child) {
+                padding-top: 48px;
+            }
+        }
+    }
+}
