--- a/client/src/homepage/pro-play-dashboard/prediction-breakdown/prediction-breakdown.scss
+++ b/client/src/homepage/pro-play-dashboard/prediction-breakdown/prediction-breakdown.scss
@@ -1,5 +1,34 @@
 @import '../../../style/variables.scss';
 
+.splitter {
+    border: solid 1px grey;
+    margin: 24px 10%;
+}
+
+.tournament-pills {
+    width: 70%;
+    margin: 48px auto;
+    display: flex;
+    justify-content: space-around;
+
+    .tournament-pill {
+        animation: text-decoration 0.2s;
+        padding: 4px 12px;
+
+        &:hover {
+            cursor: pointer;
+            text-decoration: underline;
+            animation: text-decoration 0.2s;
+        }
+
+        &.active-tournament {
+            background-color: white;
+            color: black;
+            border-radius: 12px;
+        }
+    }
+}
+
 .prediction-breakdown {
     margin: 24px 0;
 
