--- a/client/src/predictions/predictions.scss
+++ b/client/src/predictions/predictions.scss
@@ -21,7 +21,7 @@
             width: 75%;
             
             .series-match-label {
-                border-bottom: solid 1px $squad-primary;
+                // border-bottom: solid 1px $squad-overlay-two;
                 font-size: 1.5rem;
                 margin-bottom: 16px;
         
