--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -7,6 +7,7 @@ $squad-overlay-one: lighten($squad-dark-background, 5%);
 $squad-overlay-two: lighten($squad-dark-background, 8%);
 $squad-overlay-three: lighten($squad-dark-background, 10%);
 $squad-overlay-four: lighten($squad-dark-background, 12%);
+$squad-overlay-five: lighten($squad-dark-background, 15%);
 
 $squad-primary: #23e8e1;
 $squad-triad-gold: #e8b323;
